# tvm-ffi

./: .gitignore  .markdownlint-cli2.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: launch.json
.github/actions/build-llvm-linux/: 00-env.sh  10-deps.sh  20-llvm.sh  30-orcrt.sh  action.yml
.github/actions/build-orcjit-wheel/: action.yml
.github/validate/: build_llvm_manylinux.sh
.github/workflows/: cache_probe.yml  ci_mainline_only.yml  ci_test.yml  demo_orcjit_bigmerge.yml  orcjit-build.yml  orcjit-tests.yml  probe_llvm_release.yml  validate_build_llvm.yml  validate_orcjit_download.yml
addons/torch_c_dlpack_ext/: build_backend.py
addons/tvm-ffi-orcjit/: CMakeLists.txt  README.md  pyproject.toml
addons/tvm-ffi-orcjit/examples/quick-start/: CMakeLists.txt  README.md  add.cc  add_c.c  run.py
addons/tvm-ffi-orcjit/python/tvm_ffi_orcjit/: __init__.py  session.py
addons/tvm-ffi-orcjit/src/ffi/: orcjit_dylib.cc  orcjit_session.cc
addons/tvm-ffi-orcjit/tests/: CMakeLists.txt  README.md  build_test_objects.py  run_all_tests.py  test_basic.py
addons/tvm-ffi-orcjit/tests/sources/: test_call_global_c.c  test_ctor_dtor.cc  test_funcs2_c.c  test_funcs_c.c  test_funcs_conflict_c.c
addons/tvm-ffi-orcjit/tests/sources/c/: test_call_global.c  test_ctor_dtor.c  test_error.c  test_funcs.c  test_funcs2.c  test_funcs_conflict.c  test_link_order_base.c  test_link_order_caller.c  test_types.c
addons/tvm-ffi-orcjit/tests/sources/cc/: test_ctor_dtor.cc  test_error.cc  test_link_order_caller.cc  test_types.cc
addons/tvm-ffi-orcjit/tools/: debug_win_jit.cpp  debug_win_jit_CMakeLists.txt  debug_win_symbols.py  install_llvm.ps1  install_llvm.sh  test_llvm_jitlink.py
addons/tvm_ffi_orcjit/: CMakeLists.txt  pyproject.toml
addons/tvm_ffi_orcjit/python/tvm_ffi_orcjit/: __init__.py  session.py
addons/tvm_ffi_orcjit/src/ffi/: orcjit_arena_mm.cc  orcjit_arena_mm.h  orcjit_dylib.cc  orcjit_session.cc  orcjit_session.h
addons/tvm_ffi_orcjit/tests/: test_arena.py  test_dso_handle_overflow.py  test_global_session.py  utils.py
addons/tvm_ffi_orcjit/tests/sources/c/: fake_fatbin.c  test_addr.c  test_hidden_caller.c  test_hidden_helper.c
addons/tvm_ffi_orcjit/tests/sources/cc/: fake_fatbin.cc  test_addr.cc  test_hidden_caller.cc  test_hidden_helper.cc
bench/: README.md  bench_pyobject_tying.py  make_table.py  run_bench.sh  toggle_tying.patch
docs/: README.md  conf.py
docs/_stubs/: cpp_index.rst
examples/abi_overview/: example_code.c
examples/cubin_launcher/: benchmark_overhead.py  example_triton_cubin.py
examples/cubin_launcher/embedded_cubin/cpp_embed/: CMakeLists.txt
examples/kernel_library/: load_scale.py  scale_kernel.cu  tvm_ffi_utils.h
include/tvm/ffi/: c_api.h  memory.h  object.h
python/tvm_ffi/: _convert.py  _optional_torch_c_dlpack.py  _tensor.py  container.py  error.py  libinfo.py  module.py  registry.py
python/tvm_ffi/cpp/: dtype.py  extension.py  nvrtc.py
python/tvm_ffi/cython/: base.pxi  error.pxi  function.pxi  object.pxi  pycallback.pxi  tensor.pxi  tvm_ffi_python_helpers.h  tvm_ffi_python_object.h
python/tvm_ffi/dataclasses/: _utils.py  c_class.py  field.py
python/tvm_ffi/stub/: cli.py  file_utils.py
python/tvm_ffi/testing/: __init__.py
python/tvm_ffi/utils/: _build_optional_torch_c_dlpack.py  kwargs_wrapper.py
rust/tvm-ffi-sys/src/: c_api.rs
rust/tvm-ffi/src/: any.rs  lib.rs  object.rs
rust/tvm-ffi/src/collections/: array.rs  mod.rs
rust/tvm-ffi/tests/: test_array.rs
src/ffi/: custom_allocator.cc
src/ffi/extra/: dataclass.cc
tests/cpp/: test_any.cc  test_dict.cc  test_error.cc  test_expected.cc  test_init_once.cc  test_list.cc  testing_object.h
tests/cpp/extra/: test_json_parser.cc  test_serialization.cc  test_structural_equal_hash.cc  test_structural_key.cc
tests/python/: test_copy.py  test_cubin_launcher.py  test_current_work_stream_gpu.py  test_dataclasses_c_class.py  test_device.py  test_dlpack_exchange_api.py  test_dtype.py  test_error.py  test_function.py  test_load_inline.py  test_object.py  test_optional_torch_c_dlpack.py  test_pyobject_tying.py  test_repr.py  test_serialization.py  test_stream.py  test_structural.py  test_tensor.py
tests/python/utils/: test_embed_cubin.py  test_kwargs_wrapper.py
tests/scripts/: benchmark_dlpack.py  benchmark_kwargs_wrapper.py
